--- a/index.html
+++ b/index.html
@@ -33,32 +33,7 @@
           <th></th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td class="user">
-            <img src="https://github.com/JLisarte.png" alt="Imagem JLisarte">
-            <a href="https://github.com/JLisarte" target="_blank">
-              <p>Juliano Lisarte</p>
-              <span>JLisarte</span>
-            </a>
-          </td>
-          <td class="repositories">76</td>
-          <td class="followers">4</td>
-          <td><button class="remove">&times;</button></td>
-        </tr>
-        <tr>
-          <td class="user">
-            <img src="https://github.com/maykbrito.png" alt="Imagem MaykBrito">
-            <a href="https://github.com/JLisarte" target="_blank">
-              <p>Mayk Brito</p>
-              <span>Maykbrito</span>
-            </a>
-          </td>
-          <td class="repositories">76</td>
-          <td class="followers">9589</td>
-          <td><button class="remove">&times;</button></td>
-        </tr>
-      </tbody>
+      <tbody></tbody>
     </table>
   </div>
 </body>
