Add footer with social icons and copyright information

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Github Favorites</title>
+
+  <link rel="shortcut icon" href="./assets/img/logo-github.svg" type="image/x-svg">
   
   <link rel="stylesheet" href="styles.css">
 
@@ -36,5 +38,23 @@
       <tbody></tbody>
     </table>
   </div>
+  <footer>
+  <p>© 2023 - Desenvolvido por Rocketseat feito por Juliano Lisarte</p>
+    <div class="socialIcons">
+
+      <div class="github git-light">
+        <a href="https://github.com/JLisarte" target="_blank">
+          <img src="./assets/img/logo-github.svg" width="30px" alt="Icone do gitHub" >
+        </a>
+      </div>
+
+      <div class="linkedin linkedin-light">
+        <a href="https://www.linkedin.com/in/juliano-lisarte-983ab3266/" target="_blank">
+          <img src="./assets/img/logo-linkedin.svg" width="30px" alt="Icone do linkedin">
+        </a>
+      </div>
+
+    </div>
+</footer>
 </body>
 </html>
